Deleted E2E tests