@@ -110,12 +110,8 @@ dependencies {
 	testImplementation("io.ktor:ktor-server-tests-jvm")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion")
 	testImplementation("io.ktor:ktor-server-test-host-jvm:2.3.9")
-	testImplementation("com.h2database:h2:2.2.224")
-	testImplementation("com.trendyol:stove-ktor-testing-e2e:0.9.8")
-	testImplementation("com.trendyol:stove-testing-e2e:0.9.8")
-	testImplementation("io.kotest:kotest-runner-junit5-jvm:5.8.1")
-	testImplementation("com.trendyol:stove-testing-e2e-http:0.9.8")
-	testImplementation("com.trendyol:stove-testing-e2e-rdbms-postgres:0.9.8")
+	testImplementation("org.testcontainers:junit-jupiter:1.19.7")
+	testImplementation("org.testcontainers:postgresql:1.19.7")
 }
 
 liquibase {
@@ -196,22 +192,6 @@ graalvmNative {
 
 	metadataRepository {
 		enabled.set(true)
-	}
-}
-
-tasks {
-	test {
-		useJUnitPlatform()
-//		testlogger {
-//			setTheme("mocha")
-//			showStandardStreams = true
-//			showExceptions = true
-//			showCauses = true
-//		}
-		reports {
-			junitXml.required.set(true)
-		}
-		jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
 	}
 }
 
